test/callDoubleSquare1.slq

def foo[n:!â„•][m:!â„•](const x:ğ”¹^m){}
def main()â‡’foo((1,0,1):ğ”¹^3); // error
